--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
     <!-- Style -->
     <link rel="stylesheet" href="assets/css/stylesG.css">
-
+<meta name="facebook-domain-verification" content="2mubyh3tcvegrmo8biupkpvprdt1sv" />
     <!-- Favicon -->
     <!-- <link rel="shortcut icon" href="assets/img/faviconT.jpg"> -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon1.ico">
