--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Favicon -->
     <!-- <link rel="shortcut icon" href="assets/img/faviconT.jpg"> -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon1.ico">
-
+<meta name="facebook-domain-verification" content="64ai0e8vl3ydp208x69ogiaj852omd" />
 
   </head>
 
