--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- meta tag responsiva, ajuste da largura da viewport -->
     <meta name="description" content="GreenTech is a company focused on the harmony of nature with technology"> <!-- Descrição da página -->
     <meta name="author" content="APS Group"> <!-- autores da página -->
+    <meta name="facebook-domain-verification" content="m1bdh7x7t76aehfsyrnzqi1v0k9wo7" />
     <meta name="facebook-domain-verification" content="g37ds3q8umyvtsoma847rtnnf29jvn" />
     <meta name="facebook-domain-verification" content="64ai0e8vl3ydp208x69ogiaj852omd" />
     <meta name="facebook-domain-verification" content="moq8szjl3wk8psxjnnxop5k56o1dx4" />
