--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- meta tag responsiva, ajuste da largura da viewport -->
     <meta name="description" content="GreenTech is a company focused on the harmony of nature with technology"> <!-- Descrição da página -->
     <meta name="author" content="APS Group"> <!-- autores da página -->
+    <meta name="facebook-domain-verification" content="63blxuz6sz2batu5l3pdazbki2gbn9" />
     <meta name="facebook-domain-verification" content="c0jte92l5aswaht0xhzf1i8gusyebn" />
     <meta name="facebook-domain-verification" content="m1bdh7x7t76aehfsyrnzqi1v0k9wo7" />
     <meta name="facebook-domain-verification" content="g37ds3q8umyvtsoma847rtnnf29jvn" />
